@@ -18,7 +18,7 @@ struct DriverBase
 };
 
 #ifndef DRIVER_NEED_GLOBAL_EXECBASE
-#define SysBase       ((struct ExecBase*)      AHIsubBase->execbase)
+#define SysBase       (*((struct ExecBase**)   &AHIsubBase->execbase))
 #endif
 
 #define IntuitionBase ((struct IntuitionBase*) AHIsubBase->intuitionbase)
